opam-version: "2.0"
maintainer:   "shashank <shashank@shashank-Veriton-Series>"
authors:      "shashank <shashank@shashank-Veriton-Series>"
license:      "ISC"
homepage:     "https://github.com/ssdubey/ssd_irmin.git"
bug-reports:  "https://github.com/ssdubey/ssd_irmin/issues"
dev-repo:     "git+https://github.com/ssdubey/ssd_irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]
install: [make "install"]
depends: [
  "ocaml"      {>= "4.03.0"}
  "dune"       {build & >= "1.1.0"}
  "irmin"      {>= "1.3.0"}
  "irmin-test" {with-test}
]


synopsis: "Custom Generic in-memory Irmin stores"
